--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liqd-rn/video-cache",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "description": "",
   "author": "radixxko",
   "license": "MIT",
@@ -10,29 +10,30 @@
     "dist/**/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "version": "npm i && tsc && npm publish --access public"
+    "clean": "rm -rf dist package-lock.json node_modules && npm i",
+    "build": "npm run clean && tsc",
+    "version": "git pull && npm run build && npm publish && npm run commit && git push",
+    "commit": "node -e \"const version = require('./package.json').version.trim(); require('child_process').execSync('git add . && git commit -m \\\"Version ' + version + '\\\"');\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/liqd-rn/video-cache.git"
   },
   "dependencies": {
-    "@liqd-rn/app-state": "^1.0.2",
-    "@liqd-rn/storage": "^0.1.11",
+    "@liqd-rn/app-state": "^1.0.4",
+    "@liqd-rn/storage": "^0.1.14",
     "@liqd-js/fast-object-hash": "^2.0.2",
-    "react-native-blob-util": "^0.19.11"
+    "react-native-blob-util": "^0.22.2"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
   },
   "devDependencies": {
-    "@tsconfig/react-native": "^3.0.5",
-    "@types/react": "^18.3.12",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
-    "typescript": "^5.7.2"
+    "@tsconfig/react-native": "^3.0.6",
+    "@types/react": "^19.1.8",
+    "react": "19.1.0",
+    "react-native": "0.80.0",
+    "typescript": "^5.8.3"
   }
 }
